--- a/accueil.html
+++ b/accueil.html
@@ -29,17 +29,19 @@
 	<body>
 		<!-- contenu -->
 
-		<div id="nav">
+		<header>
 			<h1>Tanguy <span>Scholtes</span> <span>Web Designer</span></h1>
-			<ul>
-				<li><a href="accueil.html">Accueil</a></li>
-				<li><a href="travaux.html">Travaux</a></li>
-				<li><a href="about.html">À propos</a></li>
-				<li><a href="contact.html">Contact</a></li>
-			</ul>
-		</div>
+			<nav>
+				<ul>
+					<li><a href="accueil.html">Accueil</a></li>
+					<li><a href="travaux.html">Travaux</a></li>
+					<li><a href="about.html">À propos</a></li>
+					<li><a href="contact.html">Contact</a></li>
+				</ul>
+			</nav>
+		</header>
 
-		<div id="about">
+		<section id="about">
 			<h2>Présentation</h2>
 			<img src="#" alt="Tanguy Scholtes">
 			<p>
@@ -47,9 +49,9 @@
 
 				<span><a href="about.html">En lire plus à propos de Tanguy</a></span>
 			</p>
-		</div>
+		</section>
 
-		<div id="travaux">
+		<section id="travaux">
 			<h2>Travaux</h2>
 			<ul>
 				<li><a href="#"><h3>Refonte de site : LoLActu</h3></a>
@@ -66,9 +68,9 @@
 				</li>
 			</ul>
 			<p><a href="travaux.html">Voir plus de travaux</a></p>
-		</div>
+		</section>
 
-		<div id="footer">
+		<footer>
 			<ul class="sitemap">
 				<li><a href="accueil.html">Accueil</a></li>
 				<li><a href="travaux.html">Travaux</a></li>
@@ -87,7 +89,7 @@
 				<li><a href="#"><img src="img/linkedin.png" alt="Linkedin"></a></li>
 				<li><a href="#"><img src="img/rss.png" alt="RSS"></a></li>
 			</ul>
-		</div>
+		</footer>
 
 	</body>
 </html>
