--- a/contact.html
+++ b/contact.html
@@ -29,17 +29,19 @@
 	<body>
 		<!-- contenu -->
 
-		<div id="nav">
+		<header>
 			<h1>Tanguy <span>Scholtes</span> <span>Web Designer</span></h1>
-			<ul>
-				<li><a href="accueil.html">Accueil</a></li>
-				<li><a href="travaux.html">Travaux</a></li>
-				<li><a href="about.html">À propos</a></li>
-				<li><a href="contact.html">Contact</a></li>
-			</ul>
-		</div>
+			<nav>
+				<ul>
+					<li><a href="accueil.html">Accueil</a></li>
+					<li><a href="travaux.html">Travaux</a></li>
+					<li><a href="about.html">À propos</a></li>
+					<li><a href="contact.html">Contact</a></li>
+				</ul>
+			</nav>
+		</header>
 
-		<div class="content">
+		<section class="content">
 			<h2>Me contacter</h2>
 			<ul>
 				<li><h3>Adresse :</h3> Pré Lorint n° 14B, 4052 Beaufays</li>
@@ -60,9 +62,9 @@
    					<input type="submit" value="Envoyer">
    				</form>
 			</div>
-		</div>
+		</section>
 
-		<div id="footer">
+		<footer>
 			<ul class="sitemap">
 				<li><a href="accueil.html">Accueil</a></li>
 				<li><a href="travaux.html">Travaux</a></li>
@@ -81,7 +83,7 @@
 				<li><a href="#"><img src="img/linkedin.png" alt="Linkedin"></a></li>
 				<li><a href="#"><img src="img/rss.png" alt="RSS"></a></li>
 			</ul>
-		</div>
+		</footer>
 
 	</body>
 </html>
