--- a/travail1.html
+++ b/travail1.html
@@ -29,26 +29,28 @@
 	<body>
 		<!-- contenu -->
 
-		<div id="nav">
+		<header>
 			<h1>Tanguy <span>Scholtes</span> <span>Web Designer</span></h1>
-			<ul>
-				<li><a href="accueil.html">Accueil</a></li>
-				<li><a href="travaux.html">Travaux</a></li>
-				<li><a href="about.html">À propos</a></li>
-				<li><a href="contact.html">Contact</a></li>
-			</ul>
-		</div>
+			<nav>
+				<ul>
+					<li><a href="accueil.html">Accueil</a></li>
+					<li><a href="travaux.html">Travaux</a></li>
+					<li><a href="about.html">À propos</a></li>
+					<li><a href="contact.html">Contact</a></li>
+				</ul>
+			</nav>
+		</header>
 
-		<div id="content">
+		<section id="content">
 			<h2>Refonte de site : LoLActu</h2>
 			<img src="#" alt="Refonte LoLActu">
 			<p>
 				Dans le cadre du cours de Graphisme Web, nous avons du effectuer des refontes de pages d'accueil de sites web. Pour ce faire, nous devions choisir deux mots d'ordre. Ceux que j'ai choisi pour ce site étaient .. et ...</br>
 				
 			</p>
-		</div>
+		</section>
 
-		<div id="footer">
+		<footer>
 			<ul class="sitemap">
 				<li><a href="accueil.html">Accueil</a></li>
 				<li><a href="travaux.html">Travaux</a></li>
@@ -67,7 +69,7 @@
 				<li><a href="#"><img src="img/linkedin.png" alt="Linkedin"></a></li>
 				<li><a href="#"><img src="img/rss.png" alt="RSS"></a></li>
 			</ul>
-		</div>
+		</footer>
 
 	</body>
 </html>
