--- a/travaux.html
+++ b/travaux.html
@@ -29,17 +29,19 @@
 	<body>
 		<!-- contenu -->
 
-		<div id="nav">
+		<header>
 			<h1>Tanguy <span>Scholtes</span> <span>Web Designer</span></h1>
-			<ul>
-				<li><a href="accueil.html">Accueil</a></li>
-				<li><a href="travaux.html">Travaux</a></li>
-				<li><a href="about.html">À propos</a></li>
-				<li><a href="contact.html">Contact</a></li>
-			</ul>
-		</div>
+			<nav>
+				<ul>
+					<li><a href="accueil.html">Accueil</a></li>
+					<li><a href="travaux.html">Travaux</a></li>
+					<li><a href="about.html">À propos</a></li>
+					<li><a href="contact.html">Contact</a></li>
+				</ul>
+			</nav>
+		</header>
 
-		<div id="content">
+		<section id="content">
 			<h2>Mes travaux</h2>
 			<ul>
 				<li><a href="travail1.html"><img src="" alt="Refonte LoLActu">
@@ -59,9 +61,9 @@
 					<p>Création d'une bibliothèque en PHP.</p>
 				</li>
 			</ul>
-		</div>
+		</section>
 
-		<div id="footer">
+		<footer>
 			<ul class="sitemap">
 				<li><a href="accueil.html">Accueil</a></li>
 				<li><a href="travaux.html">Travaux</a></li>
@@ -80,7 +82,7 @@
 				<li><a href="#"><img src="img/linkedin.png" alt="Linkedin"></a></li>
 				<li><a href="#"><img src="img/rss.png" alt="RSS"></a></li>
 			</ul>
-		</div>
+		</footer>
 
 	</body>
 </html>
