--- a/about.html
+++ b/about.html
@@ -29,17 +29,19 @@
 	<body>
 		<!-- contenu -->
 
-		<div id="nav">
+		<header>
 			<h1>Tanguy <span>Scholtes</span> <span>Web Designer</span></h1>
-			<ul>
-				<li><a href="accueil.html">Accueil</a></li>
-				<li><a href="travaux.html">Travaux</a></li>
-				<li><a href="about.html">À propos</a></li>
-				<li><a href="contact.html">Contact</a></li>
-			</ul>
-		</div>
+			<nav>
+				<ul>
+					<li><a href="accueil.html">Accueil</a></li>
+					<li><a href="travaux.html">Travaux</a></li>
+					<li><a href="about.html">À propos</a></li>
+					<li><a href="contact.html">Contact</a></li>
+				</ul>
+			</nav>
+		</header>
 
-		<div class="content">
+		<section class="content">
 			<h2>À propos de moi</h2>
 			<div id="ficheInfo">
 				<img src="" alt="Tanguy Scholtes">
@@ -61,9 +63,9 @@
 				<p id="cv"><a href="#">Télécharger mon CV au format pdf</a></p>
 			</div>
 
-		</div>
+		</section>
 
-		<div id="footer">
+		<footer>
 			<ul class="sitemap">
 				<li><a href="accueil.html">Accueil</a></li>
 				<li><a href="travaux.html">Travaux</a></li>
@@ -82,7 +84,7 @@
 				<li><a href="#"><img src="img/linkedin.png" alt="Linkedin"></a></li>
 				<li><a href="#"><img src="img/rss.png" alt="RSS"></a></li>
 			</ul>
-		</div>
+		</footer>
 
 	</body>
 </html>
