--- a/contact.html
+++ b/contact.html
@@ -73,7 +73,7 @@
 			</ul>
 			<ul class="contact">
 				<li>Tanguy SCHOLTES</li>
-				<li>Tel. : +32497/23.40.67</li>
+				<li>Tel. : +32 497 23 40 67</li>
 				<li>Email : soultaker720@hotmail.com</li>
 				<li><a href="contact.html">Formulaire de contact</a></li>
 			</ul>
