--- a/travail1.html
+++ b/travail1.html
@@ -48,6 +48,7 @@
 				Dans le cadre du cours de Graphisme Web, nous avons du effectuer des refontes de pages d'accueil de sites web. Pour ce faire, nous devions choisir deux mots d'ordre. Ceux que j'ai choisi pour ce site étaient .. et ...</br>
 				
 			</p>
+			<p><a href="#">Voir le projet</a></p>
 		</section>
 
 		<footer>
@@ -59,7 +60,7 @@
 			</ul>
 			<ul class="contact">
 				<li>Tanguy SCHOLTES</li>
-				<li>Tel. : +32497/23.40.67</li>
+				<li>Tel. : +32 497 23 40 67</li>
 				<li>Email : soultaker720@hotmail.com</li>
 				<li><a href="contact.html">Formulaire de contact</a></li>
 			</ul>
