--- a/travaux.html
+++ b/travaux.html
@@ -43,24 +43,29 @@
 
 		<section id="content">
 			<h2>Mes travaux</h2>
-			<ul>
-				<li><a href="travail1.html"><img src="" alt="Refonte LoLActu">
-					<h3>Refonte de site : LoLActu</h3></a>
-					<p>Création de la page d'accueil d'un site d'information fictif sur le jeu League of Legends dans le cadre du cours de Graphisme Web.</p>
-				</li>
-				<li><a href="#"><img src="" alt="Refonte Heroes of the Storm">
-					<h3>Refonte de site : Heroes of the Storm</h3></a>
-					<p>Refonte de la page d'accueil du site du jeu Heroes of the Storm dans le cadre du cours de Graphisme Web.</p>
-				</li>
-				<li><a href="#"><img src="" alt="Refonte Confrérie des traducteurs Skyrim">
-					<h3>Refonte de site : Confrérie des traducteurs Skyrim</h3></a>
-					<p>Refonte de la page d'accueil de la section Skyrim du site La Confrérie des traducteurs dans le cadre du cours de Graphisme Web.</p>
-				</li>
-				<li><a href="#"><img src="" alt="Bibliothèque PHP">
-					<h3>Bibliothèque PHP</h3></a>
-					<p>Création d'une bibliothèque en PHP.</p>
-				</li>
-			</ul>
+			<article class="travail1">
+				<a href="travail1.html"><img src="" alt="Refonte LoLActu">
+				<h3>Refonte de site : LoLActu</h3></a>
+				<p>Création de la page d'accueil d'un site d'information fictif sur le jeu League of Legends dans le cadre du cours de Graphisme Web.</p>
+			</article>
+
+			<article class="travail2">
+				<a href="#"><img src="" alt="Refonte Heroes of the Storm">
+				<h3>Refonte de site : Heroes of the Storm</h3></a>
+				<p>Refonte de la page d'accueil du site du jeu Heroes of the Storm dans le cadre du cours de Graphisme Web.</p>
+			</article>
+
+			<article class="travail3">
+				<a href="#"><img src="" alt="Refonte Confrérie des traducteurs Skyrim">
+				<h3>Refonte de site : Confrérie des traducteurs Skyrim</h3></a>
+				<p>Refonte de la page d'accueil de la section Skyrim du site La Confrérie des traducteurs dans le cadre du cours de Graphisme Web.</p>
+			</article>
+
+			<article class="travail4">
+				<a href="#"><img src="" alt="Bibliothèque PHP">
+				<h3>Bibliothèque PHP</h3></a>
+				<p>Création d'une bibliothèque en PHP.</p>
+			</article>
 		</section>
 
 		<footer>
@@ -72,7 +77,7 @@
 			</ul>
 			<ul class="contact">
 				<li>Tanguy SCHOLTES</li>
-				<li>Tel. : +32497/23.40.67</li>
+				<li>Tel. : +32 497 23 40 67</li>
 				<li>Email : soultaker720@hotmail.com</li>
 				<li><a href="contact.html">Formulaire de contact</a></li>
 			</ul>
