--- a/accueil.html
+++ b/accueil.html
@@ -30,7 +30,7 @@
 		<!-- contenu -->
 
 		<header>
-			<h1>Tanguy <span>Scholtes</span> <span>Web Designer</span></h1>
+			<h1><a href="accueil.html">Tanguy <span>Scholtes</span></a></h1>
 			<nav>
 				<ul>
 					<li><a href="accueil.html">Accueil</a></li>
@@ -54,7 +54,7 @@
 		<section id="travaux">
 			<h2>Travaux</h2>
 			<ul>
-				<li><a href="#"><h3>Refonte de site : LoLActu</h3></a>
+				<li><a href="travail1.html"><h3>Refonte de site : LoLActu</h3></a>
 					<p>Création de la page d'accueil d'un site d'information fictif sur le jeu League of Legends dans le cadre du cours de Graphisme Web.</p>
 				</li>
 				<li><a href="#"><h3>Refonte de site : Heroes of the Storm</h3></a>
