--- a/travaux.html
+++ b/travaux.html
@@ -30,7 +30,7 @@
 		<!-- contenu -->
 
 		<header>
-			<h1>Tanguy <span>Scholtes</span> <span>Web Designer</span></h1>
+			<h1><a href="accueil.html">Tanguy <span>Scholtes</span></a></h1>
 			<nav>
 				<ul>
 					<li><a href="accueil.html">Accueil</a></li>
