--- a/contact.html
+++ b/contact.html
@@ -1,37 +1,35 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<!DOCTYPE html PUBLIC 	"-//W3C//DTD XHTML 1.0 Strict//EN"
-						"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="fr-BE">
-	<head>
-		<!-- pour protocole http -->
-		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-		<meta http-equiv="Content-Style-Type" content="text/css" />
-		<meta http-equiv="Content-Script-Type" content="text/javascript" />
-		<meta http-equiv="Content-Language" content="fr-BE" />
+<!DOCTYPE html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!-->
+<html class="no-js"> <!--<![endif]-->
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<!-- "notice Dublin Core" de la ressource (plus d'info : http://openweb.eu.org/articles/dublin_core/) -->
-		<meta name="DC.Language" content="fr" />
-		<meta name="DC.Creator" content="Tanguy SCHOLTES" />
-		<meta name="DC.Format" content="text/html" />
-		
-		<!-- icone pour les favoris -->
-		<link rel="shortcut icon" type="image/png" href="../img/favicon.png" />
+        <script src="js/vendor/modernizr-2.6.2.min.js"></script>
 
-		<!-- liens vers les feuilles de styles adéquates en fonction du media -->
-		<link rel="stylesheet" type="text/css" href="css/main.css" media="screen" />
-				
-		<!-- inclure le javascript -->
-		<script type="text/javascript" src="../js/script.js" ></script>
+        <link rel="stylesheet" href="css/style.css">
+        <script type="text/javascript" src="js/script.js" ></script>
 
-		<title>Contact - Tanguy Scholtes Portfolio</title>
+        <link rel="shortcut icon" type="image/png" href="favicon.png" />
+		<title>Accueil - Tanguy Scholtes Portfolio</title>
 	</head>
 
 	<body>
+		<!--[if lt IE 7]>
+     	   <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser<to improve your experience.</p>
+        <![endif]-->
+
 		<!-- contenu -->
 
 		<header>
 			<h1><a href="accueil.html">Tanguy <span>Scholtes</span></a></h1>
-			<nav>
+			<nav id="menu">
+				<h2>Navigation</h2>
 				<ul>
 					<li><a href="accueil.html">Accueil</a></li>
 					<li><a href="travaux.html">Travaux</a></li>
@@ -65,25 +63,41 @@
 		</section>
 
 		<footer>
-			<ul class="sitemap">
-				<li><a href="accueil.html">Accueil</a></li>
-				<li><a href="travaux.html">Travaux</a></li>
-				<li><a href="about.html">À propos</a></li>
-				<li><a href="contact.html">Contact</a></li>
-			</ul>
-			<ul class="contact">
-				<li>Tanguy SCHOLTES</li>
-				<li>Tel. : +32 497 23 40 67</li>
-				<li>Email : soultaker720@hotmail.com</li>
-				<li><a href="contact.html">Formulaire de contact</a></li>
-			</ul>
-			<ul class="social">
-				<li><a href="#"><img src="img/facebook.png" alt="Facebook"></a></li>
-				<li><a href="#"><img src="img/twitter.png" alt="Twitter"></a></li>
-				<li><a href="#"><img src="img/linkedin.png" alt="Linkedin"></a></li>
-				<li><a href="#"><img src="img/rss.png" alt="RSS"></a></li>
-			</ul>
+			<nav class="sitemap">
+				<h2>Plan du site</h2>
+				<ul>
+					<li><a href="accueil.html">Accueil</a></li>
+					<li><a href="travaux.html">Travaux</a></li>
+					<li><a href="about.html">À propos</a></li>
+					<li><a href="contact.html">Contact</a></li>
+				</ul>
+			</nav>
+			<p class="contact">
+				Tanguy SCHOLTES</br>
+				Tel. : +32 497 23 40 67</br>
+				Email : soultaker720@hotmail.com</br>
+				<a href="contact.html">Formulaire de contact</a>
+			</p>
+			<div class="social">
+				<h2>Réseaux sociaux</h2>
+				<ul>
+					<li><a href="#"><img src="img/facebook.png" alt="Facebook"></a></li>
+					<li><a href="#"><img src="img/twitter.png" alt="Twitter"></a></li>
+					<li><a href="#"><img src="img/linkedin.png" alt="Linkedin"></a></li>
+					<li><a href="#"><img src="img/rss.png" alt="RSS"></a></li>
+				</ul>
+			</div>
 		</footer>
+
+		<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+        <script>
+            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+            e.src='//www.google-analytics.com/analytics.js';
+            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+            ga('create','UA-XXXXX-X');ga('send','pageview');
+        </script>
 
 	</body>
 </html>
