--- a/accueil.html
+++ b/accueil.html
@@ -26,7 +26,7 @@
 
 		<!-- contenu -->
 		<header>
-			<h1><a href="accueil.html">Tanguy <span>Scholtes</span></a></h1>
+			<h1><a href="accueil.html">Tanguy Scholtes</a> <span>Web designer</span></h1>
 			<nav id="menu">
 				<h2>Navigation</h2>
 				<ul>
