--- a/travaux.html
+++ b/travaux.html
@@ -91,6 +91,7 @@
 					<li><a href="#"><img src="img/rss.png" alt="RSS"></a></li>
 				</ul>
 			</div>
+			<span id="legal">Tanguy Scholtes - 2014</span>
 		</footer>
 
 		<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
