css about section

--- a/accueil.html
+++ b/accueil.html
@@ -40,9 +40,10 @@
 
 		<section id="about">
 			<h2>Présentation</h2>
-			<img src="#" alt="Tanguy Scholtes">
+			<img src="img/TanguyScholtes.png" alt="Tanguy Scholtes">
 			<p>
-				Designer et développeur web spécialisé dans la création de visuels pour sites internet.
+				Je suis un designer et développeur web spécialisé dans la création de visuels pour sites internet.
+				J'aime créer des sites attractifs, qui correspondent à vos désirs et qui plaisent à tous.
 
 				<span><a href="about.html">En lire plus à propos de Tanguy</a></span>
 			</p>
