css about section

--- a/accueil.html
+++ b/accueil.html
@@ -45,7 +45,7 @@
 				Je suis un designer et développeur web spécialisé dans la création de visuels pour sites internet.
 				J'aime créer des sites attractifs, qui correspondent à vos désirs et qui plaisent à tous.
 
-				<span><a href="about.html">En lire plus à propos de Tanguy</a></span>
+				<span class="button"><a href="about.html">En lire plus à propos de Tanguy</a></span>
 			</p>
 		</section>
 
@@ -70,7 +70,7 @@
 				<a href="#"><h3>Bibliothèque PHP</h3></a>
 				<p>Création d'une bibliothèque en PHP.</p>
 			</article>
-			<span><a href="travaux.html">Voir plus de travaux</a></span>
+			<span class="button"><a href="travaux.html">Voir plus de travaux</a></span>
 		</section>
 
 		<footer>
