css travaux section

--- a/accueil.html
+++ b/accueil.html
@@ -51,24 +51,32 @@
 
 		<section id="travaux">
 			<h2>Travaux</h2>
-			<article>
-				<a href="travail1.html"><h3>Refonte de site : LoLActu</h3></a>
-				<p>Création de la page d'accueil d'un site d'information fictif sur le jeu League of Legends dans le cadre du cours de Graphisme Web.</p>
+			<article class="travail1">
+				<a href="travail1.html">
+					<h3>Refonte de site : LoLActu</h3>
+					<p>Création de la page d'accueil d'un site d'information fictif sur le jeu League of Legends dans le cadre du cours de Graphisme Web.</p>
+				</a>
 			</article>
 
-			<article>
-				<a href="#"><h3>Refonte de site : Heroes of the Storm</h3></a>
-				<p>Refonte de la page d'accueil du site du jeu Heroes of the Storm dans le cadre du cours de Graphisme Web.</p>
+			<article class="travail2">
+				<a href="#">
+					<h3>Refonte de site : Heroes of the Storm</h3>
+					<p>Refonte de la page d'accueil du site du jeu Heroes of the Storm dans le cadre du cours de Graphisme Web.</p>
+				</a>
 			</article>
 
-			<article>
-				<a href="#"><h3>Refonte de site : Confrérie des traducteurs Skyrim</h3></a>
+			<article class="travail3">
+				<a href="#">
+					<h3>Refonte de site : Confrérie des traducteurs Skyrim</h3>
 					<p>Refonte de la page d'accueil de la section Skyrim du site La Confrérie des traducteurs dans le cadre du cours de Graphisme Web.</p>
+				</a>
 			</article>
 
-			<article>
-				<a href="#"><h3>Bibliothèque PHP</h3></a>
-				<p>Création d'une bibliothèque en PHP.</p>
+			<article class="travail4">
+				<a href="#">
+					<h3>Bibliothèque PHP</h3>
+					<p>Création d'une bibliothèque en PHP.</p>
+				</a>
 			</article>
 			<span class="button"><a href="travaux.html">Voir plus de travaux</a></span>
 		</section>
@@ -83,12 +91,15 @@
 					<li><a href="contact.html">Contact</a></li>
 				</ul>
 			</nav>
-			<p class="contact">
-				Tanguy SCHOLTES</br>
-				Tel. : +32 497 23 40 67</br>
-				Email : soultaker720@hotmail.com</br>
-				<a href="contact.html">Formulaire de contact</a>
-			</p>
+			<div class="contact">
+				<h2>Contactez-moi</h2>
+				<p>
+					Tanguy SCHOLTES</br>
+					Tel. : +32 497 23 40 67</br>
+					Email : soultaker720@hotmail.com</br>
+					<a href="contact.html">Formulaire de contact</a>
+				</p>
+			</div>
 			<div class="social">
 				<h2>Réseaux sociaux</h2>
 				<ul>
